#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

#AC_PREREQ([2.68])
AC_INIT([DRMAAv2 Reference Implementation], [0.1], [drmaa-wg@ogf.org])
#AC_CONFIG_SRCDIR([drmaa2-debug.h])
#AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.
AC_CHECK_LIB([cunit], [main])
AS_IF([test "$ac_cv_lib_cunit" = yes], [CUNIT_EXISTS=1], [CUNIT_EXISTS=0])
AC_SUBST([CUNIT_EXISTS])

# Check for SQLite3 library
AC_CHECK_HEADER([sqlite3.h])
AC_CHECK_LIB([sqlite3], [sqlite3_open])
AS_IF([test "$ac_cv_header_sqlite3_h" = yes], [SQLITE3_EXISTS=1], [SQLITE3_EXISTS=0])
AC_SUBST([SQLITE3_EXISTS])

# Checks for header files.
AC_CHECK_HEADERS([stdlib.h string.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_TYPE_PID_T

# Checks for library functions.
AC_FUNC_FORK
AC_FUNC_MALLOC
AC_FUNC_MKTIME
AC_CHECK_FUNCS([strdup])

AC_CONFIG_FILES([Makefile tests/Makefile])
AC_OUTPUT

